--- a/MoeDeloApi/MoeDeloApi.csproj
+++ b/MoeDeloApi/MoeDeloApi.csproj
@@ -46,29 +46,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTO\UrlDto\MdUrlBase.cs" />
+    <Compile Include="DTO\UrlDto\MdUrlBills.cs" />
     <Compile Include="Logger\ConsoleLogger.cs" />
     <Compile Include="Logger\ILogger.cs" />
-    <Compile Include="MoeDeloDto\Bill\BillCollectionItemRepresentation.cs" />
-    <Compile Include="MoeDeloDto\Bill\BillPayment.cs" />
-    <Compile Include="MoeDeloDto\Bill\BillRepresentation.cs" />
-    <Compile Include="MoeDeloDto\Bill\BillRepresentationCollection.cs" />
-    <Compile Include="MoeDeloDto\Bill\Context.cs" />
-    <Compile Include="MoeDeloDto\Bill\SalesDocumentItemRepresentation.cs" />
-    <Compile Include="MoeDeloDto\Bill\SettlementAccountModel.cs" />
-    <Compile Include="MoeDeloDto\Kontragent\KontragentDto.cs" />
-    <Compile Include="MoeDeloDto\Kontragent\KontragentRepresentationCollection.cs" />
-    <Compile Include="MoeDeloDto\Kontragent\TagDto.cs" />
-    <Compile Include="MoeDeloDto\Mony\ApiPageResponseDto.cs" />
-    <Compile Include="MoeDeloDto\Mony\ContractorDto.cs" />
-    <Compile Include="MoeDeloDto\Mony\NdsDto.cs" />
-    <Compile Include="MoeDeloDto\Mony\OperationResponseDto.cs" />
-    <Compile Include="MoeDeloDto\Mony\SourceDto.cs" />
+    <Compile Include="DTO\MoeDeloDto\Bill\BillCollectionItemRepresentation.cs" />
+    <Compile Include="DTO\MoeDeloDto\Bill\BillPayment.cs" />
+    <Compile Include="DTO\MoeDeloDto\Bill\BillRepresentation.cs" />
+    <Compile Include="DTO\MoeDeloDto\Bill\BillRepresentationCollection.cs" />
+    <Compile Include="DTO\MoeDeloDto\Bill\Context.cs" />
+    <Compile Include="DTO\MoeDeloDto\Bill\SalesDocumentItemRepresentation.cs" />
+    <Compile Include="DTO\MoeDeloDto\Bill\SettlementAccountModel.cs" />
+    <Compile Include="DTO\MoeDeloDto\Kontragent\KontragentDto.cs" />
+    <Compile Include="DTO\MoeDeloDto\Kontragent\KontragentRepresentationCollection.cs" />
+    <Compile Include="DTO\MoeDeloDto\Kontragent\TagDto.cs" />
+    <Compile Include="DTO\MoeDeloDto\Mony\ApiPageResponseDto.cs" />
+    <Compile Include="DTO\MoeDeloDto\Mony\ContractorDto.cs" />
+    <Compile Include="DTO\MoeDeloDto\Mony\NdsDto.cs" />
+    <Compile Include="DTO\MoeDeloDto\Mony\OperationResponseDto.cs" />
+    <Compile Include="DTO\MoeDeloDto\Mony\SourceDto.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\EntityServices\BillService.cs" />
+    <Compile Include="Services\GetMdEntityByIdCommand.cs" />
     <Compile Include="Services\IMoeDeloApiGetCommand.cs" />
     <Compile Include="Services\IMoeDeloDatabase.cs" />
-    <Compile Include="Services\IMoeDeloEntity.cs" />
+    <Compile Include="Services\MoeDeloEntityBase.cs" />
     <Compile Include="Services\IMoeDeloListEntity.cs" />
     <Compile Include="Services\IMoeDeloRepository.cs" />
     <Compile Include="Services\EntityServices\KontragentService.cs" />
